# tp1-metodos

./: .gitignore  CMakeLists.txt  README.md  analisis.ipynb  experimentos.ipynb  hello_test.cc  printMatrix.py  requirements.txt  testInput.txt  testOutput.txt  tests_de_catedra.ipynb
.ipynb_checkpoints/: analisis-checkpoint.ipynb  experimentos-checkpoint.ipynb
instancias/: ejemplo.txt  indice.csv
resultados/: resultado.csv  resultado_intercalado.csv  resultado_prendido.csv  resultado_temperatura_unica_instancia.csv  testOutput.txt
resultados/instancia_ideal/: 10X10.out  10X15.out  10X20.out  10X25.out  10X30.out  10X35.out  10X40.out  10X45.out  10X5.out  10X50.out  15X10.out  15X15.out  15X20.out  15X25.out  15X30.out  15X35.out  15X40.out  15X45.out  15X5.out  15X50.out  20X10.out  20X15.out  20X20.out  20X25.out  20X30.out  20X35.out  20X40.out  20X45.out  20X5.out  20X50.out  25X10.out  25X15.out  25X20.out  25X25.out  25X30.out  25X35.out  25X40.out  25X45.out  25X5.out  25X50.out  (+60 more)
resultados/instancia_intercalada/: 10X12_LU.out  10X16_LU.out  10X20_LU.out  10X24_LU.out  10X28_LU.out  10X32_LU.out  10X35.out  10X36_LU.out  10X40_LU.out  10X4_LU.out  10X5.out  10X50.out  10X8_LU.out  15X12_LU.out  15X16_LU.out  15X20_LU.out  15X24_LU.out  15X25.out  15X28_LU.out  15X32_LU.out  15X35.out  15X36_LU.out  15X40_LU.out  15X4_LU.out  15X50.out  15X8_LU.out  20X12_LU.out  20X15.out  20X16_LU.out  20X20.out  20X20_LU.out  20X24_LU.out  20X28_LU.out  20X30.out  20X32_LU.out  20X35.out  20X40.out  (+106 more)
src/: main  main.cpp  main.h
tests_alu/: test1.out  test3.out  test4.out
(+87 files in other folders)
